Changes hove color back to purple

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -239,7 +239,7 @@ hr {
 	}
 
 		a:hover {
-			color: #B5E3F0 !important;
+			color: #a581a5 !important;
 			border-bottom-color: transparent;
 		}
 
