--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -235,6 +235,7 @@ hr {
 		-ms-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		color: #caadca;
+		text-decoration:none;
 	
 	}
 
